// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Interstitial Meeting Loading 1`] = `
Array [
  <div
    className="wxc-interstitial-meeting"
  >
    <i
      className="md-spinner md-spinner--36 md-spinner--black"
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Interstitial Meeting Video Disabled 1`] = `
Array [
  <div
    className="wxc-interstitial-meeting"
  >
    <div
      className="wxc-meeting-info interstitial-meeting-info"
    >
      <h2>
        Lunch and Learn
      </h2>
    </div>
    <div
      className="wxc-local-media wxc-local-media-no-media"
    >
      <div
        className="md-avatar md-avatar--medium"
        title="Barbara German"
      >
        <span
          className="md-avatar__letter"
          style={
            Object {
              "backgroundColor": "",
              "color": "",
            }
          }
        >
          BG
        </span>
        <img
          alt="Barbara German"
          className="md-avatar__img md-avatar__img--hidden"
          draggable={false}
          onError={[Function]}
          onLoad={[Function]}
          src="./images/barbara.png"
        />
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Interstitial Meeting Video Enabled 1`] = `
Array [
  <div
    className="wxc-interstitial-meeting"
  >
    <div
      className="wxc-meeting-info interstitial-meeting-info"
    >
      <h2>
        Weekly Backlog Grooming
      </h2>
    </div>
    <div
      className="wxc-local-media"
    >
      <video
        autoPlay={true}
        playsInline={true}
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
]
`;
